# relief-route

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
artifacts/: leaderboard.json
relief_route_env/: __init__.py  baseline.py  client.py  grader.py  models.py  tasks.py
scripts/: evaluate_baselines.py  interactive_console.py  replay_trace.py
server/: __init__.py  app.py  relief_route_environment.py
tests/: test_relief_route.py
