[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relief-route-openenv"
version = "0.2.0"
description = "OpenEnv benchmark for humanitarian logistics in disaster and conflict-affected regions."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "shash" }
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "openenv-core[core]>=0.2.2",
  "pydantic>=2.8.0,<3.0.0",
  "pyyaml>=6.0.1,<7.0.0",
  "requests>=2.32.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "openai>=2.7.2,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
]

[tool.setuptools]
packages = ["relief_route_env", "server", "scripts"]

[project.scripts]
server = "server.app:main"
relief-route-console = "scripts.interactive_console:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
